# pwos

./: .gitignore  Cargo.toml  README.md  build.rs  partitions-ota.csv  partitions.csv  sdkconfig.debug  sdkconfig.release
.cargo/: config.toml
.github/workflows/: ci.yml
src/: firmware.rs  firmware.rs.bak  main.rs  os_alloc.rs
src/config/: app.rs  mod.rs  sys.rs.example
src/shell/: mod.rs
src/sysc/: battery.rs  brownout.rs  error.rs  gpio.rs  joined_writer.rs  ledctl.rs  log.rs  logger.rs  logging.rs  macros.rs  mod.rs  nvs.rs  ota.rs  panic.rs  periph.rs  periphctl.rs  power.rs  sleep.rs  uart.rs  usbctl.rs  verification.rs
src/sysc/drivers/: envsensor_trait.rs  fakedev.rs  htu.rs  htu21d.rs  mod.rs  si7021.rs
src/sysc/ext_drivers/: bme280.rs  envsensor_trait.rs  fake.rs  htu.rs  mod.rs
src/sysc/net/: mod.rs  wifi.rs
src/sysc/periph/: arduino_nano_esp32.rs  lilygo_t7s3.rs  mod.rs  xiao_s3.rs
