[package]
name = "pwos"
version = "2.0.0"
authors = ["Fábián Varga <23280129+br0kenpixel@users.noreply.github.com>"]
description = "PixelWeatherOS for the PixelWeather weather station project."
homepage = "https://github.com/PixelWeatherProject"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/PixelWeatherProject/pwos"
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "pwos"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = 3

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
esp-idf-svc = { version = "0.50.1", default-features = false, features = [
    "std",
    "alloc",
    "binstart",
] }
simple_logger = { version = "5.0.0", default-features = false, features = [
    "colors",
    "colored",
] }
pwmp-client = { git = "ssh://git@github.com/PixelWeatherProject/pwmp-client.git", rev = "94fd6e2" }
log = { version = "0.4", default-features = false }
build-time = "0.1.3"
thiserror = "2.0.11"
heapless = "0.8.0"

[build-dependencies]
embuild = "0.33.0"

[patch.crates-io]
embedded-svc = { git = "ssh://git@github.com/PixelWeatherProject/embedded-svc.git", rev = "29afd95" }