[package]
name = "pwos"
version = "2.0.3"
authors = ["Fábián Varga <23280129+br0kenpixel@users.noreply.github.com>"]
description = "PixelWeatherOS for the PixelWeather weather station project."
homepage = "https://github.com/PixelWeatherProject"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/PixelWeatherProject/pwos"
edition = "2021"
resolver = "2"
rust-version = "1.84"

[[bin]]
name = "pwos"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = 3
codegen-units = 1
lto = "thin"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
esp-idf-svc = { version = "0.51.0", default-features = false, features = [
    "std",
    "alloc",
    "binstart",
] }
pwmp-client = { git = "ssh://git@github.com/PixelWeatherProject/pwmp-client.git", tag = "v2.1.2" }
log = { version = "0.4", default-features = false, features = ["release_max_level_info", "max_level_debug"] }
thiserror = "2.0.12"
heapless = "0.8.0"

[build-dependencies]
embuild = "0.33.0"

[patch.crates-io]
embedded-svc = { git = "ssh://git@github.com/PixelWeatherProject/embedded-svc.git", rev = "29afd95" }

[features]
lilygo-t7s3 = []
xiao-s3 = []
arduino-nano-esp32 = []
