[package]
name = "pwos"
version = "2.1.0"
authors = ["Fábián Varga <23280129+br0kenpixel@users.noreply.github.com>"]
description = "PixelWeatherOS for the PixelWeather weather station project."
homepage = "https://github.com/PixelWeatherProject"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/PixelWeatherProject/pwos"
edition = "2021"
resolver = "2"
rust-version = "1.93"

[[bin]]
name = "pwos"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
panic = "abort"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
esp-idf-svc = { version = "0.52.1", default-features = false, features = [
    "std",
    "alloc",
    "binstart",
] }
pwmp-client = { git = "https://github.com/PixelWeatherProject/pwmp-client", tag = "v2.2.4" }
log = { version = "0.4.29", default-features = false, features = ["release_max_level_info", "max_level_debug"] }
thiserror = { version = "2.0.18", default-features = false }
heapless = "0.9.2"

[build-dependencies]
embuild = "0.33.1"

[patch.crates-io]
embedded-svc = { git = "https://github.com/PixelWeatherProject/embedded-svc.git", rev = "6bdd552" }

[features]
lilygo-t7s3 = []
xiao-s3 = []
arduino-nano-esp32 = []
